import {
  BriefcaseIcon,
  ChevronUpIcon,
  HatSchoolIcon,
} from '@udir-design/icons';
import preview from '.storybook/preview';
import { Badge } from '../badge/Badge';
import { Dropdown } from '../dropdown/Dropdown';
import { Link } from '../link/Link';
import { Avatar } from './Avatar';

const meta = preview.meta({
  component: Avatar,
  tags: ['beta', 'digdir'],
  parameters: {
    componentOrigin: {
      originator: 'digdir',
      details:
        'Vi har fjernet muligheten til å endre formen for en mer konsekvent brukeropplevelse på tvers av tjenester.',
    },
    layout: 'padded',
    customStyles: {
      display: 'flex',
      gap: 'var(--ds-size-2)',
      justifyContent: 'center',
      alignItems: 'center',
    },
  },
});

const profileImage =
  'https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=1480&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D';

export const Preview = meta.story({
  args: {
    'aria-label': 'Ola Nordmann',
    children: '',
  },
});

export const Content = meta.story({
  args: { 'aria-label': 'Ola Nordmann' },
  render: (args) => (
    <>
      <Avatar {...args} />
      <Avatar {...args} initials="ON" />
      <Avatar {...args}>
        <BriefcaseIcon />
      </Avatar>
      <Avatar {...args}>
        <img src={profileImage} alt="" />
      </Avatar>
    </>
  ),
});

export const Sizes = meta.story({
  render: (args) => (
    <>
      <Avatar {...args} data-size="xs" aria-label="extra small" initials="xs" />
      <Avatar {...args} data-size="xs" aria-label="extra small" />
      <Avatar {...args} data-size="sm" aria-label="small" initials="sm" />
      <Avatar {...args} data-size="sm" aria-label="small" />
      <Avatar {...args} data-size="md" aria-label="medium" initials="md" />
      <Avatar {...args} data-size="md" aria-label="medium" />
      <Avatar {...args} data-size="lg" aria-label="large" initials="lg" />
      <Avatar {...args} data-size="lg" aria-label="large" />
    </>
  ),
});

export const ColorVariants = meta.story({
  render: (args) => (
    <>
      <Avatar {...args} data-color="neutral" aria-label="color neutral" />
      <Avatar {...args} data-color="accent" aria-label="color accent" />
      <Avatar {...args} data-color="support1" aria-label="color support1" />
      <Avatar {...args} data-color="support2" aria-label="color support2" />
    </>
  ),
});

export const InDropdown = meta.story({
  parameters: {
    layout: 'fullscreen',
    customStyles: {
      height: '320px',
    },
  },
  render: (args) => (
    <Dropdown.TriggerContext>
      <Dropdown.Trigger variant="tertiary">
        <Avatar {...args} aria-hidden data-size="sm" initials="ON" />
        Ola Nordmann
        <ChevronUpIcon aria-hidden />
      </Dropdown.Trigger>
      <Dropdown placement="bottom-end" data-size="md" open>
        <Dropdown.Heading>Velg profil</Dropdown.Heading>
        <Dropdown.List>
          <Dropdown.Item>
            <Dropdown.Button>
              <Badge.Position overlap="circle">
                <Badge data-color="danger" data-size="sm" />
                <Avatar {...args} aria-hidden data-size="xs" initials="ON" />
              </Badge.Position>
              Ola Nordmann
            </Dropdown.Button>
          </Dropdown.Item>
          <Dropdown.Item>
            <Dropdown.Button>
              <Avatar data-size="xs" data-color="support1" aria-hidden>
                <BriefcaseIcon />
              </Avatar>
              Sogndal kommune
            </Dropdown.Button>
          </Dropdown.Item>
        </Dropdown.List>
      </Dropdown>
    </Dropdown.TriggerContext>
  ),
});

export const Icons = meta.story({
  args: { 'aria-label': 'Ola Nordmann' },
  render: (args) => (
    <>
      <style>{`
        .avatar-group {
          display: flex;
          gap: var(--ds-size-2);
          flex-direction: column;
        }
        .avatar-icon-group {
          display: flex;
          align-items: center;
          gap: var(--ds-size-2);
        }
      `}</style>
      <div className="avatar-group">
        <div className="avatar-icon-group">
          <Avatar {...args} />
          <span>Person</span>
        </div>
        <div className="avatar-icon-group">
          <Avatar {...args}>
            <HatSchoolIcon />
          </Avatar>
          <span>Skole</span>
        </div>
        <div className="avatar-icon-group">
          <Avatar {...args}>
            <BriefcaseIcon />
          </Avatar>
          <span>Virksomhet</span>
        </div>
      </div>
    </>
  ),
});

export const AsLink = meta.story({
  args: {
    'aria-hidden': true,
  },
  render: (args) => (
    <Link
      href="https://www.udir.no/"
      style={{ display: 'flex', gap: 'var(--ds-size-2)', alignItems: 'center' }}
    >
      <Avatar {...args} />
      <span>Ola Nordmann</span>
    </Link>
  ),
});
